--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="footerFixed">
         <div id="header">
             <div id="titleber">
-                <h1><a href="/portfolio/index.html">荒木稜雅 Araki Ryoma</a></h1>
+                <h1><a href="https://ryoma01.github.io/portfolio/">荒木稜雅 Araki Ryoma</a></h1>
             </div>
         </div>
 
 
         <div class="wrapper">
             <ul class="nav_block">
-                <li><a href="/portfolio/index.html">HOME</a></li>
+                <li><a href="https://ryoma01.github.io/portfolio/">HOME</a></li>
             </ul>
             <div class="main">
                 <h2>京都産業大学 情報理工学部 B3 24卒</h2>
