--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="wrapper">
             <ul class="nav_block">
                 <li><a href="https://ryoma01.github.io/Portfolio/">HOME</a></li>
+                <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioAbout.html/">ABOUT</a></li>
             </ul>
             <div class="main">
                 <h2>京都産業大学 情報理工学部 B3 24卒</h2>
