--- a/html/PortfolioAbout.html
+++ b/html/PortfolioAbout.html
@@ -19,7 +19,7 @@
         <div class="wrapper">
             <ul class="nav_block">
                 <li><a href="https://ryoma01.github.io/Portfolio/">HOME</a></li>
-                <li><a href="https://ryoma01.github.io/Portfolio/html/">ABOUT</a></li>
+                <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioAbout.html">ABOUT</a></li>
             </ul>
             <div class="main">
                 <h1>ABOUT</h1>
