--- a/html/PortfolioAbout.html
+++ b/html/PortfolioAbout.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>荒木稜雅</title>
-    <link rel="stylesheet" href="PortfolioStyle.css"></link>
+    <link rel="stylesheet" href="Portfolio/PortfolioStyle.css"></link>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 </head>
 
