--- a/html/PortfolioAbout.html
+++ b/html/PortfolioAbout.html
@@ -11,7 +11,7 @@
     <div class="footerFixed">
         <div id="header">
             <div id="titleber">
-                <h1><a href="PortfolioIndex.html">荒木稜雅 Araki Ryoma</a></h1>
+                <h1><a href="https://ryoma01.github.io/Portfolio/">荒木稜雅 Araki Ryoma</a></h1>
             </div>
         </div>
 
