--- a/html/PortfolioAbout.html
+++ b/html/PortfolioAbout.html
@@ -20,6 +20,7 @@
             <ul class="nav_block">
                 <li><a href="https://ryoma01.github.io/Portfolio/">HOME</a></li>
                 <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioAbout.html">ABOUT</a></li>
+                <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioWorks.html">WORKS</a></li>
             </ul>
             <div class="main">
                 <h1>ABOUT</h1>
