--- a/html/PortfolioWorks.html
+++ b/html/PortfolioWorks.html
@@ -28,14 +28,14 @@
                 
                 <div class="items">
                     <div class="item">
-                        <div class="img_wrap"><img src="NIVR.png"alt="蚊" style="width:100%;height:100%;max-width:640px;"></div>
+                        <div class="img_wrap"><img src="https://ryoma01.github.io/Portfolio/img/NIVR.png"alt="蚊" style="width:100%;height:100%;max-width:640px;"></div>
                         <div class="main_b">
                             <h3>腹ペコmosquito</h3>
                             <p>高校2年生でUnityインターハイ2018に出場</p>
                         </div>
                     </div>
                     <div class="item">
-                        <div class="img_wrap"><img src="NIVR.png"alt="NIVR" style="width:100%;height:100%;max-width:640px;"></div>
+                        <div class="img_wrap"><img src="https://ryoma01.github.io/Portfolio/img/NIVR.png"alt="NIVR" style="width:100%;height:100%;max-width:640px;"></div>
                         <div class="main_b">
                             <h3>NIVR</h3>
                             <p>高校3年生でIVRC2019・Unityインターハイ2018に出場</p>
@@ -43,7 +43,7 @@
                     </div>
 
                     <div class="item">
-                        <a href="PortfolioSpeaker1.html"><div class="img_wrap"><img src="スピーカー1.png" alt="スピーカー" style="width:100%;height:auto;max-width:640px;"></div></a>
+                        <a href="PortfolioSpeaker1.html"><div class="https://ryoma01.github.io/Portfolio/img/img_wrap"><img src="スピーカー1.png" alt="スピーカー" style="width:100%;height:auto;max-width:640px;"></div></a>
                         <div class="main_b">
                             <h3>スケルトンスピーカー</h3>
                             <p>デジタルファブリケーションの授業で制作, &nbsp; スピーカーを再利用し再び使えるスピーカーにしようと考えた。オシャレであまり見たことのないスピーカーを作りたいと考え, &nbsp;中身が見えるスケルトンスピーカーにしようと思った。</p>
@@ -51,7 +51,7 @@
                     </div>
 
                     <div class="item">
-                        <a href="PortfolioSpeaker1.html"><div class="img_wrap"><img src="●IMG_3498.JPG" alt="スピーカー" style="width:100%;height:auto;max-width:640px;"></div></a>
+                        <a href="PortfolioSpeaker1.html"><div class="https://ryoma01.github.io/Portfolio/img/img_wrap"><img src="●IMG_3498.JPG" alt="スピーカー" style="width:100%;height:auto;max-width:640px;"></div></a>
                         <div class="main_b">
                             <h3>スケルトンスピーカー〜六角形Ver〜</h3>
                             <p>スピーカーを再利用し, &nbsp;六角形にする事でどのような音が出るのか試すために制作した。</p>
@@ -59,7 +59,7 @@
                     </div>
 
                     <div class="item">
-                        <a href="PortfolioSpeaker1.html"><div class="img_wrap"><img src="Hand_line.png" alt="HMP" style="width:100%;height:auto;max-width:640px;"></div></a>
+                        <a href="PortfolioSpeaker1.html"><div class="https://ryoma01.github.io/Portfolio/img/img_wrap"><img src="Hand_line.png" alt="HMP" style="width:100%;height:auto;max-width:640px;"></div></a>
                         <div class="main_b">
                             <h3>人類山化計画</h3>
                             <p>IVRC2021に出場</p>
@@ -67,7 +67,7 @@
                     </div>
 
                     <div class="item">
-                        <a href="PortfolioSpeaker1.html"><div class="img_wrap"><img src="Hand_line.png" alt="HMP" style="width:100%;height:auto;max-width:640px;"></div></a>
+                        <a href="PortfolioSpeaker1.html"><div class="https://ryoma01.github.io/Portfolio/img/img_wrap"><img src="Hand_line.png" alt="HMP" style="width:100%;height:auto;max-width:640px;"></div></a>
                         <div class="main_b">
                             <h3>俺の大砲物語</h3>
                             <p>サイバーエージェント主催第5回プロトスプリントリーグで制作</p>
@@ -75,7 +75,7 @@
                     </div>
 
                     <div class="item">
-                        <a href="PortfolioSpeaker1.html"><div class="img_wrap"><img src="Hand_line.png" alt="HMP" style="width:100%;height:auto;max-width:640px;"></div></a>
+                        <a href="PortfolioSpeaker1.html"><div class="https://ryoma01.github.io/Portfolio/img/img_wrap"><img src="Hand_line.png" alt="HMP" style="width:100%;height:auto;max-width:640px;"></div></a>
                         <div class="main_b">
                             <h3></h3>
                             <p>サイバーエージェント主催第5回プロトスプリントリーグで制作</p>
