--- a/html/PortfolioWorks.html
+++ b/html/PortfolioWorks.html
@@ -51,7 +51,7 @@
                     </div>
 
                     <div class="item">
-                        <a href="https://ryoma01.github.io/Portfolio/html/PortfolioSpeaker1.html"><div class="img_wrap"><img src="●IMG_3498.JPG" alt="スピーカー" style="width:100%;height:auto;max-width:640px;"></div></a>
+                        <a href="https://ryoma01.github.io/Portfolio/html/PortfolioSpeaker1.html"><div class="img_wrap"><img src="IMG_3498.JPG" alt="スピーカー" style="width:100%;height:auto;max-width:640px;"></div></a>
                         <div class="main_b">
                             <h3>スケルトンスピーカー〜六角形Ver〜</h3>
                             <p>スピーカーを再利用し, &nbsp;六角形にする事でどのような音が出るのか試すために制作した。</p>
