--- a/html/PortfolioSpeaker1.html
+++ b/html/PortfolioSpeaker1.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html
-    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 
 <head>
     <title>荒木稜雅</title>
-    <link rel="stylesheet" href="PortfolioStyle.css"></link>
+    <link rel="stylesheet" href="https://ryoma01.github.io/Portfolio/PortfolioStyle.css"></link>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 </head>
 
@@ -12,17 +11,16 @@
     <div class="footerFixed">
         <div id="header">
             <div id="titleber">
-                <h1><a href="PortfolioIndex.html">荒木稜雅 Araki Ryoma</a></h1>
+                <h1><a href="https://ryoma01.github.io/Portfolio/">荒木稜雅 Araki Ryoma</a></h1>
             </div>
         </div>
 
 
         <div class="wrapper">
             <ul class="nav_block">
-                <li><a href="PortfolioIndex.html">HOME</a></li>
-                <li><a href="PortfolioAbout.html">ABOUT</a></li>
-                <li><a href="PortfolioWorks.html">WORKS</a></li>
-                <li><a href="PortforioSkill.html">SKILL</a></li>
+                <li><a href="https://ryoma01.github.io/Portfolio/">HOME</a></li>
+                <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioAbout.html">ABOUT</a></li>
+                <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioWorks.html">WORKS</a></li>
             </ul>
             <div class="main">
                 <h2>スピーカー</h2>
