--- a/html/PortfolioWorks.html
+++ b/html/PortfolioWorks.html
@@ -28,14 +28,14 @@
                 
                 <div class="items">
                     <div class="item">
-                        <div class="img_wrap"><img src="https://ryoma01.github.io/Portfolio/img/NIVR.png"alt="蚊" style="width:100%;height:100%;max-width:640px;"></div>
+                        <a href="https://ryoma01.github.io/Portfolio/html/PortfolioSpeaker1.html"><div class="img_wrap"><img src="https://ryoma01.github.io/Portfolio/img/NIVR.png"alt="蚊" style="width:100%;height:100%;max-width:640px;"></div></a>
                         <div class="main_b">
                             <h3>腹ペコmosquito</h3>
                             <p>高校2年生でUnityインターハイ2018に出場</p>
                         </div>
                     </div>
                     <div class="item">
-                        <div class="img_wrap"><img src="https://ryoma01.github.io/Portfolio/img/NIVR.png"alt="NIVR" style="width:100%;height:100%;max-width:640px;"></div>
+                        <a href="https://ryoma01.github.io/Portfolio/html/PortfolioSpeaker1.html"><div class="img_wrap"><img src="https://ryoma01.github.io/Portfolio/img/NIVR.png"alt="NIVR" style="width:100%;height:100%;max-width:640px;"></div></a>
                         <div class="main_b">
                             <h3>NIVR</h3>
                             <p>高校3年生でIVRC2019・Unityインターハイ2018に出場</p>
