--- a/html/PortforioSkill.html
+++ b/html/PortforioSkill.html
@@ -24,16 +24,12 @@
                 <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioSkill.html">SKILL</a></li>
             </ul>
             <div class="main">
-                <h1>ABOUT</h1>
+                <h2>SKILL</h2>
                 <div class="main_b">
-                    <h3>氏名</h3>
-                    <p>荒木稜雅 Araki Ryoma</p>
-                    <h3>所属</h3>
-                    <p>京都産業大学情報理工学部情報理工学科B3 (2024年卒業予定）</p>
-                    <h3>趣味</h3>
-                    <p>ゲーム制作, &nbsp;サッカー観戦(徳島ヴォルティス, アーセナル), &nbsp;VR, &nbsp;AR, &nbsp;ゲーム(ミリシタ, ウマ娘, FIFA22)</p>
+                    <p>Webの仕組みを理解し、Webドキュメントの文章データ管理の概念と共に、人が見る・使うという観点から文章データのデザインの概念についても理解を深める。</p>
+                    <p>Web文章の記述フォーマットに対するアクセシビリティチェックのツール等を使い、様々なWebサイトやページに対してWebユーザビリティやWebアクセビリティの調査を行い、考察する。</p>
                 </div>
-                 
+                <p>学籍番号：053039 氏名：荒木稜雅</p>
             </div>
         </div>
 
@@ -61,7 +57,7 @@
                     </a>
                 </p>
             </div>
-            <address>Copyright &copy; 2022 RYOMA ARAKI</address>
+            <address>Copyright &copy; 2021 RYOMA ARAKI</address>
         </div>
     </div>
 </body>
