--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="https://ryoma01.github.io/Portfolio/">HOME</a></li>
                 <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioAbout.html">ABOUT</a></li>
                 <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioWorks.html">WORKS</a></li>
+                <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioSkill.html">SKILL</a></li>
             </ul>
             <div class="main">
                 <h2>京都産業大学 情報理工学部 B3 24卒</h2>
