--- a/html/PortfolioSpeaker1.html
+++ b/html/PortfolioSpeaker1.html
@@ -4,6 +4,7 @@
 <head>
     <title>荒木稜雅</title>
     <link rel="stylesheet" href="https://ryoma01.github.io/Portfolio/PortfolioStyle.css"></link>
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 </head>
 
