--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             <div class="main">
                 <h2>京都産業大学 情報理工学部 B3 24卒</h2>
                 <div class="main_b">
-                    <p>Webの仕組みを理解し、Webドキュメントの文章データ管理の概念と共に、人が見る・使うという観点から文章データのデザインの概念についても理解を深める。</p>
-                    <p>Web文章の記述フォーマットに対するアクセシビリティチェックのツール等を使い、様々なWebサイトやページに対してWebユーザビリティやWebアクセビリティの調査を行い、考察する。</p>
+                    <li><a href="https://twitter.com/ryoga_0p"></a><li></li>
                 </div>
                 <p>学籍番号：053039 氏名：荒木稜雅</p>
             </div>
