--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             <div class="main">
                 <h2>京都産業大学 情報理工学部 B3 24卒</h2>
                 <div class="main_b">
-                    <li><a href="https://twitter.com/ryoga_0p"></a><li></li>
+                    <ul class="snsbtniti">
+                        <li><a href="https://twitter.com/ryoga_0p" class="flowbtn4 fl_tw2"
+                            ><i class="fab fa-twitter"></i><div>Twitter</div></a></li>
+                    </ul>
                 </div>
                 <p>学籍番号：053039 氏名：荒木稜雅</p>
             </div>
