--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             </ul>
             <div class="main">
                 <h2>京都産業大学 情報理工学部 B3 24卒</h2>
-                    
+                <ul class="follow-me">
+                    <li><a href="https://twitter.com"></a></li>
+                </ul>
                 
                 <p>学籍番号：053039 氏名：荒木稜雅</p>
             </div>
