--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
                 <h2>京都産業大学 情報理工学部 B3 24卒</h2>
                 <ul class="follow-me">
                     <li><a href="https://twitter.com/ryoga_0p"></a></li>
+                    <li><a href="https://www.facebook.com"></a></li>
+                    </ul>
                 </ul>
+                
                 
                 <p>学籍番号：053039 氏名：荒木稜雅</p>
             </div>
