--- a/html/PortfolioWorks.html
+++ b/html/PortfolioWorks.html
@@ -22,7 +22,7 @@
                 <li><a href="https://ryoma01.github.io/Portfolio/">HOME</a></li>
                 <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioAbout.html">ABOUT</a></li>
                 <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioWorks.html">WORKS</a></li>
-                <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioSkill.html">SKILL</a></li>
+                <!--<li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioSkill.html">SKILL</a></li> -->
             </ul>
            
             <div class="main">
