--- a/html/PortfolioSpeaker1.html
+++ b/html/PortfolioSpeaker1.html
@@ -22,15 +22,15 @@
                 <li><a href="https://ryoma01.github.io/Portfolio/">HOME</a></li>
                 <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioAbout.html">ABOUT</a></li>
                 <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioWorks.html">WORKS</a></li>
-                <li><a href="https://ryoma01.github.io/Portfolio/html/PortfolioSkill.html">SKILL</a></li>
+               
             </ul>
             <div class="main">
                 <h2>スピーカー</h2>
-                <div class="main_b">
-                    <p>Webの仕組みを理解し、Webドキュメントの文章データ管理の概念と共に、人が見る・使うという観点から文章データのデザインの概念についても理解を深める。</p>
-                    <p>Web文章の記述フォーマットに対するアクセシビリティチェックのツール等を使い、様々なWebサイトやページに対してWebユーザビリティやWebアクセビリティの調査を行い、考察する。</p>
+                <div class="works_page">
+                    <img src="https://ryoma01.github.io/Portfolio/img/スピーカー1.png">
+                    <p>デジタルファブリケーションの授業で制作, &nbsp; スピーカーを再利用し再び使えるスピーカーにしようと考えた。オシャレであまり見たことのないスピーカーを作りたいと考え, &nbsp;中身が見えるスケルトンスピーカーにしようと思った。</p>
                 </div>
-                <p>学籍番号：053039 氏名：荒木稜雅</p>
+                
             </div>
         </div>
 
