--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
                 <div class="img_wrap_center"><img src="https://ryoma01.github.io/Portfolio/img/trophy.png"></div>
             </div>
             <blockquote class="twitter-tweet">
-                <p lang="en" dir="ltr">[Laval Virtual Awards 🏆] The ReVolution <a href="https://twitter.com/hashtag/Research?src=hash&amp;ref_src=twsrc%5Etfw">#Research</a> award is won by Kyoto Sanyo University for their project « The Human Mountainification Project », congratulations!  <a href="https://twitter.com/hashtag/Livetweet?src=hash&amp;ref_src=twsrc%5Etfw">#Livetweet</a> <a href="https://twitter.com/hashtag/LVAwards2022?src=hash&amp;ref_src=twsrc%5Etfw">#LVAwards2022</a> <a href="https://t.co/bKhgrjNBct">pic.twitter.com/bKhgrjNBct</a></p>&mdash; Laval Virtual (@lavalvirtual) <a href="https://twitter.com/lavalvirtual/status/1514292728816930816?ref_src=twsrc%5Etfw">April 13, 2022</a>
-            </blockquote>
-             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
+                <p lang="en" dir="ltr">[Laval Virtual Awards 🏆] The ReVolution <a href="https://twitter.com/hashtag/Research?src=hash&amp;ref_src=twsrc%5Etfw">#Research</a> award is won by Kyoto Sanyo University for their project « The Human Mountainification Project », congratulations!  <a href="https://twitter.com/hashtag/Livetweet?src=hash&amp;ref_src=twsrc%5Etfw">#Livetweet</a> <a href="https://twitter.com/hashtag/LVAwards2022?src=hash&amp;ref_src=twsrc%5Etfw">#LVAwards2022</a> <a href="https://t.co/bKhgrjNBct">pic.twitter.com/bKhgrjNBct</a></p>&mdash; Laval Virtual (@lavalvirtual) <a href="https://twitter.com/lavalvirtual/status/1514292728816930816?ref_src=twsrc%5Etfw">April 13, 2022</a></blockquote><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                
+            </div>
 
         <div class="works">
             <h2>WORKS</h2>
