--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="product">
             <h2>MAIN PRODUCT</h2>
-            <div class="img_wrap_center"><img src="https://ryoma01.github.io/Portfolio/img/Hand_line.png"></div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/NJc1vRhFrK4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="main_article">
                 <h2>
                     人類山化計画
@@ -49,7 +49,7 @@
                 <p>
                     アバターを使ったコミュニケーションは自分の好きなものへと変身することができ、本来は多様な個性を発揮してコミュニケーションをすることが可能な技術であると考えられます。しかし、こういったシーンで使用されるアバターの多くはほとんどが人型です。もし、触覚までリアルな人型以外のアバターになることができれば人はより自由に自分のなりたいものに変身してコミュニケーションできるのではないでしょうか。そこで、我々は人型以外のアバターを使ったコミュニケーションの形として、人でも生物ですらもない山をテーマにしました。本システムでは温度と振動を提示できるグローブとプロジェクションマッピングを組み合わせることで、右手を身体感のある山に変身させます。自然現象を引き起こすことができる操作役と山役が相互作用することで生まれる、新しいアバターコミュニケーションの創出に挑戦するシステムが人類山化計画です。
                 </p>
-                <div class="img_wrap_center"><img src="https://ryoma01.github.io/Portfolio/img/trophy.png"></div>
+                <div class="img_wrap_center"><img src="https://ryoma01.github.io/Portfolio/img/trophy.jpeg" width="560" height="373"></div>
             </div>
             <blockquote class="twitter-tweet">
                 <p lang="en" dir="ltr">[Laval Virtual Awards 🏆] The ReVolution <a href="https://twitter.com/hashtag/Research?src=hash&amp;ref_src=twsrc%5Etfw">#Research</a> award is won by Kyoto Sanyo University for their project « The Human Mountainification Project », congratulations!  <a href="https://twitter.com/hashtag/Livetweet?src=hash&amp;ref_src=twsrc%5Etfw">#Livetweet</a> <a href="https://twitter.com/hashtag/LVAwards2022?src=hash&amp;ref_src=twsrc%5Etfw">#LVAwards2022</a> <a href="https://t.co/bKhgrjNBct">pic.twitter.com/bKhgrjNBct</a></p>&mdash; Laval Virtual (@lavalvirtual) <a href="https://twitter.com/lavalvirtual/status/1514292728816930816?ref_src=twsrc%5Etfw">April 13, 2022</a></blockquote><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
