--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <!-- card-item -->
             <div class="card-item">            
                 <a class="card-link" href="#">
-                   <img sclass="card-img" src="https://ryoma01.github.io/Portfolio/img/trophy.jpeg" width="560" height="373" alt="">
+                   <img sclass="card-img" src="https://ryoma01.github.io/Portfolio/img/mosquito.png" width="350" height="207" alt="">
                     <h2 class="card-tit">タイトルタイトル</h2>
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </a><!-- /card-content -->
@@ -84,7 +84,7 @@
             <!-- card-item -->
             <div class="card-item">            
                 <a class="card-link" href="#">
-                   <img sclass="card-img" src="https://ryoma01.github.io/Portfolio/img/trophy.jpeg" width="560" height="373" alt="">
+                   <img sclass="card-img" src="https://ryoma01.github.io/Portfolio/img/NIVR.png" width="350" height="207" alt="">
                     <h2 class="card-tit">タイトルタイトル</h2>
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </a><!-- /card-content -->
@@ -93,7 +93,7 @@
             <!-- card-item -->
             <div class="card-item">            
                 <a class="card-link" href="#">
-                   <img sclass="card-img" src="https://ryoma01.github.io/Portfolio/img/trophy.jpeg" width="560" height="373" alt="">
+                   <img sclass="card-img" src="https://ryoma01.github.io/Portfolio/img/sp1.png" width="350" height="207" alt="">
                     <h2 class="card-tit">タイトルタイトル</h2>
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </a><!-- /card-content -->
@@ -102,7 +102,7 @@
             <!-- card-item -->
             <div class="card-item">            
                 <a class="card-link" href="#">
-                   <img sclass="card-img" src="https://ryoma01.github.io/Portfolio/img/trophy.jpeg" width="560" height="373" alt="">
+                   <img sclass="card-img" src="https://ryoma01.github.io/Portfolio/img/trophy.jpeg" width="350" height="207" alt="">
                     <h2 class="card-tit">タイトルタイトル</h2>
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </a><!-- /card-content -->
