--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <!-- card-item -->
             <div class="card-item">            
                 <a class="card-link" href="#">
-                   <img sclass="card-img" src="https://ryoma01.github.io/Portfolio/img/trophy.jpeg" width="350" height="207" alt="">
+                   <img sclass="card-img" src="https://ryoma01.github.io/Portfolio/img/IMG_3498.JPG" width="350" height="207" alt="">
                     <h2 class="card-tit">タイトルタイトル</h2>
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </a><!-- /card-content -->
