--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 
  
         </div><!-- /card-container -->
-
+        <h1>LINK</h1>
         <div class="link">
-            <h1>LINK</h1>
+            <img src="https://ryoma01.github.io/Portfolio/img/Instagram">
         </div>
 
         <div id="footer">
