--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
         </div><!-- /card-container -->
         <h1>LINK</h1>
         <div class="link">
-            <img src="https://ryoma01.github.io/Portfolio/img/Instagram">
+            <a href="https://twitter.com/ryoga_0p"><img src="https://ryoma01.github.io/Portfolio/img/Twitter.png"></a>
+            <a href="https://instagram.com/ryoma5745"><img src="https://ryoma01.github.io/Portfolio/img/Instagram.png"></a>
+            <a href="mailto:g2053039@cc.kyoto-su.ac.jp"><img src="https://ryoma01.github.io/Portfolio/img/Messages.png"></a>
         </div>
 
         <div id="footer">
