--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/RZmsgGADkz4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
             <div class="main_article">
                 <p>
-                    　子供の頃に一度はヒーローになってみたいと思ったことはないだろうか。数あるヒーローの中からアイアンマンになりたいと考えた。しかしアイアンマンのスーツを制作するには、膨大なお金と時間がかかってしまう。そこでスーツの一部、グローブだけなら作れると考えた。アイアンマンはグローブからビームを撃ち相手に攻撃を与える。実際に物が出るのは危険であるため、ペルチェ素子と振動モーターを用いてビームを撃つ感覚を手に提示できたら面白いのではないかと考え制作した。
+                    　子供の頃に一度はヒーローになってみたいと思ったことはありませんか？私は、数あるヒーローの中からアイアンマンになりたいと考えました。しかしアイアンマンのスーツを制作するには、膨大なお金と時間がかかってしまいます。そこでスーツの一部、グローブだけなら作れるのではないかと考えました。アイアンマンはグローブからビームを撃ち相手に攻撃を与えますが実際に物が出るのは危険であるため、ペルチェ素子と振動モーターを用いてビームを撃つ感覚を手に提示できたら面白いのではないかと考え制作しました。
                 </p>
             </div>
             
