--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             </div>
 
             <h2>打ち上げ花火、下から見るか？自分で作るか？</h2>
-            <div style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/RZmsgGADkz4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/xJoUdCeKINs?si=HlkvhWlYm0xt1J2K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="main_article">
                 <p>
-                    
+                    　⽇本の伝統的な花⽕⼤会は、美しい花⽕が打ち上げられる様⼦を通じて、多くの⼈々に感動を与えてきました。しかし、天候の悪さやコロナの影響などで、花⽕⼤会が中⽌になることが増えています。また、花⽕⼤会はあくまで⼀⽅的な観賞体験であり、自分で花⽕を打ち上げる体験は難をすることは難しい。そこで、私たちはデジタル技術を使って、花⽕を楽しむだけでなく、実際に花⽕を打ち上げる体験ができるデジタル花⽕体験を提供します。このデジタル花⽕体験は、花⽕⽟を自分で作り、自分で打ち上げることで、自分の作った花⽕が空に昇る楽しさや、プロジェクターやスピーカーを使った臨場感を楽しむことができます。
                 </p>
             </div>
             
