--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <div id="footer">
             <a href="#" class="top">TOPへ</a>
-            <address>Copyright &copy; 2025Q RYOMA ARAKI</address>
+            <address>Copyright &copy; 2025 RYOMA ARAKI</address>
         </div>
     </div>
 </body>
