--- a/index.html
+++ b/index.html
@@ -125,6 +125,22 @@
                     <p>　子供の頃に一度はヒーローになってみたいと思ったことはありませんか？私は、数あるヒーローの中からアイアンマンになりたいと考えました。しかしアイアンマンのスーツを制作するには、膨大なお金と時間がかかってしまいます。そこでスーツの一部、グローブだけなら作れるのではないかと考えました。アイアンマンはグローブからビームを撃ち相手に攻撃を与えますが実際に物が出るのは危険であるため、ペルチェ素子と振動モーターを用いてビームを撃つ感覚を手に提示できたら面白いのではないかと考え制作しました。</p>
                 </a><!-- /card-content -->
             </div><!-- /card-item -->
+
+            <!-- card-item -->
+            <div class="card-item">            
+                <a class="card-link">
+                    <img sclass="card-img" src="https://ryoma01.github.io/Portfolio/img/SICHI.png" width="350" height="350" alt="">
+                    <h2 class="card-tit">ドキドキ誘発デバイス</h2>
+                    <h3 class="card-tit">概要</h3>
+                    <p>　振動スピーカーとヒアラブルデバイスを用いて，実際の心拍よりも速く強い疑似心拍を提示することで、緊張や興奮を高めることを目指す</p>
+                    <h3 class="card-tit">概要</h3>
+                    <p>●ヒアラブルデバイス「RN002 TW」で心拍を取得し、Bluetoothでスマートフォンに送信</p>
+                    <p>●スマートフォンで疑似心拍音を生成し、デバイスに送信</p>
+                    <p>●胸に装着したバイブロトランスデューサで疑似心拍を触覚的に再現</p>
+                    <h3 class="card-tit">受賞</h3>
+                    <p>ヒューマンインタフェースシンポジウム2024の学生コンテスト（SICHI）にて奨励賞を受賞</p>
+                </a><!-- /card-content -->
+            </div><!-- /card-item -->
             
 
  
